[project]
name = "sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.1",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
]
